Fixes through the menu and patterns panel sections.

--- a/tex/docs-structure.tex
+++ b/tex/docs-structure.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-04-20
-% \update      2016-11-29
+% \update      2018-10-20
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -153,7 +153,7 @@
 % number.  Very useful if you have a hard-copy of the document to deal with.
 
 \newcommand{\figureref}[1] {
-   figure~\ref{#1}
+   Figure~\ref{#1}
    "\nameref{#1}"
    on page~\pageref{#1}\ignorespaces
 }
